  The library is fairly stable and regressions tends to be fixed fast when reported.

HOW TO UPDATE?

- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

------------------------------------------------------------------------
 VERSION 0.6.122
------------------------------------------------------------------------

Updates:
- callback_data: callback_data can now be a callable that will automatically
                 run and replace the data argument for the callback

Fixes:
- add_text_point: fixed issue where the y value was incorrect #450
- constants:      added missing docking mvGuiCol_* constants

------------------------------------------------------------------------
 VERSION 0.6.121
------------------------------------------------------------------------

Fixes:
- logger:         fixed issue where logs didn't show up at first
- get_item_label: fixed issue where internal label was returned #428
- plot:           fixed issue where plot ignored label #435

------------------------------------------------------------------------
 VERSION 0.6.119
------------------------------------------------------------------------

New Keywords:
- add_input_text:               Added "tab_input"

Fixes:
- delete_row:   fixed issue where row 0 couldn't be deleted #421

------------------------------------------------------------------------
 VERSION 0.6.117
------------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.117

Updates:
- glfw:              updated to 3.3.2
- implot:            updated to 0.9 WIP a9d3347

New Keywords:
- plot:               Added "equal_aspects" keyword #305

Breaking Changes:
- popup keyword:     removed unused popup keyword
- set_item_popup:    removed command
- get_item_popup:    removed command

Fixes:
- start_dearpygui:   can be called more than once now