@@ -612,6 +612,7 @@ namespace Marvel {
 		ADD_PYTHON_FUNCTION(set_managed_column_width)
 		ADD_PYTHON_FUNCTION(get_item_type)
 		ADD_PYTHON_FUNCTION(set_item_callback)
+		ADD_PYTHON_FUNCTION(set_item_callback_data)
 		ADD_PYTHON_FUNCTION(get_value)
 		ADD_PYTHON_FUNCTION(set_value)
 		ADD_PYTHON_FUNCTION(add_value)
@@ -633,6 +634,7 @@ namespace Marvel {
 		ADD_PYTHON_FUNCTION(get_item_rect_max)
 		ADD_PYTHON_FUNCTION(get_item_rect_size)
 		ADD_PYTHON_FUNCTION(get_item_callback)
+		ADD_PYTHON_FUNCTION(get_item_callback_data)
 		ADD_PYTHON_FUNCTION(get_item_parent)
 		ADD_PYTHON_FUNCTION(delete_item)
 		ADD_PYTHON_FUNCTION(does_item_exist)
